# SPA_DRF

./: .env.sample  Dockerfile  pyproject.toml
config/: celery.py  settings.py  urls.py
spa/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
spa/migrations/: 0001_initial.py  0002_alter_habit_period_alter_habit_reward.py  0003_habit_date_time_next_sent_alter_habit_period.py  0004_action_user_place_user.py
spa/tests/: tests_action.py  tests_habit.py  tests_place.py  tests_services.py
users/: models.py  permissions.py  services_telegram.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_telegram_bot_token_user_telegram_chat_id.py  0003_remove_user_telegram_chat_id.py  0004_remove_user_telegram_bot_token_user_tg_chat_id_and_more.py
users/tests/: tests_telegram.py  tests_user.py
